2015-10-04  Uros Bizjak  <ubizjak@gmail.com>

	* gcc.target/i386/vect-pack-trunc-1.c: Require avx512bw
	effective target.
	* gcc.target/i386/vect-pack-trunc-2.c: Ditto.
	* gcc.target/i386/vect-perm-even-1.c: Ditto.
	* gcc.target/i386/vect-perm-odd-1.c: Ditto.
	* gcc.target/i386/vect-unpack-1.c: Ditto.
	* gcc.target/i386/vect-unpack-2.c: Ditto.

2015-10-04  Mikael Morin  <mikael@gcc.gnu.org>

	PR fortran/67758
	* gfortran.dg/common_24.f: New.

2015-10-03  Bernd Edlinger  <bernd.edlinger@hotmail.de>

	* gcc.target/arm/pr67756.c: Fixed warnings.

2015-10-02  Marek Polacek  <polacek@redhat.com>

	PR c/67730
	* gcc.dg/pr67730-1.c: New test.
	* gcc.dg/pr67730-2.c: New test.
	* gcc.dg/pr67730.h: New test.

2015-10-02  Marek Polacek  <polacek@redhat.com>

	* c-c++-common/Wduplicated-cond-2.c: Skip until PR67819 is resolved.

2015-10-02  Sebastian Pop  <s.pop@samsung.com>

	PR tree-optimization/67754
	* gfortran.dg/graphite/block-1.f90: Adjust pattern.
	* gfortran.dg/graphite/block-2.f: Same.

2015-10-02  Sebastian Pop  <s.pop@samsung.com>

	* gcc.dg/graphite/scop-23.c: New.

2015-10-02  Kirill Yukhin  <kirill.yukhin@intel.com>

	* gcc.target/i386/builtin_target.c: Handle "avx512ifma"
	and "avx512vbmi".

2015-10-02  Vladimir Makarov  <vmakarov@redhat.com>

	PR rtl-optimization/67756
	* gcc.target/arm/pr67756.c: New.

2015-10-02  Jiong Wang  <jiong.wang@arm.com>

	* gcc.target/aarch64/tlsle12_tiny_1.c: New testcase for tiny model.
	* gcc.target/aarch64/tlsle24_tiny_1.c: Likewise.
	* gcc.target/aarch64/tlsle_sizeadj_tiny_1.c: TLS size truncation test
	for tiny model.
	* gcc.target/aarch64/tlsle_sizeadj_small_1.c: TLS size truncation test
	for small model.

2015-10-02  Kirill Yukhin  <kirill.yukhin@intel.com>

	* gcc.target/i386/vect-pack-trunc-1.c: New test.
	* gcc.target/i386/vect-pack-trunc-2.c: Ditto.
	* gcc.target/i386/vect-perm-even-1.c: Ditto.
	* gcc.target/i386/vect-perm-odd-1.c: Ditto.
	* gcc.target/i386/vect-unpack-1.c: Ditto.